--- a/src/dashboard/views/guild.ejs
+++ b/src/dashboard/views/guild.ejs
@@ -148,6 +148,10 @@
                     </script>
                     
             </div>
+            <div class="setting" style="grid-area: prefix">
+                <h3>Prefix</h3>
+                <input type="text" id="prefix" value="<%= data.db.prefix %>">
+            </div>
             <!--premium-->
             <div class="setting premium resend">
                 <div style="grid-area: resendtitle"><h3 class="name" title="Resend someone censored message with the message censored in a spoiler."> Resend <img title="Premium" class="premb" src="/p.png" width="30"></h3></div>
