Google analytics on all pages

--- a/src/dashboard/views/admin.ejs
+++ b/src/dashboard/views/admin.ejs
@@ -21,6 +21,7 @@
             }
         </style>
         <title>Admin page</title>
+        <%- include('partials/googleanalytics') %>
     </head>
     <body>
         <h1>Admin</h1>
