--- a/src/dashboard/views/invite.ejs
+++ b/src/dashboard/views/invite.ejs
@@ -31,6 +31,7 @@
             }
         </style>
         <title>Error</title>
+        <%- include('partials/googleanalytics') %>
     </head>
     <body>
         <h1 class="txt">The bot is not in this server!</h1>
