--- a/src/dashboard/views/logs.ejs
+++ b/src/dashboard/views/logs.ejs
@@ -25,6 +25,7 @@
   <head>
     <title>Logs</title>
     <link href="<%= base %>/static/css/logs.css" rel="stylesheet">
+    <%- include('partials/googleanalytics') %>
   </head>
   <body>
     <div id="logs">
