--- a/src/dashboard/views/updates.ejs
+++ b/src/dashboard/views/updates.ejs
@@ -38,6 +38,7 @@
         border: 1px solid #171a1c;
       }
     </style>
+    <%- include('partials/googleanalytics') %>
   </head>
   <body onload="document.getElementById(window.location.hash.substr(1)).scrollIntoView()">
     <div id="main">
