--- a/src/dashboard/views/commands.ejs
+++ b/src/dashboard/views/commands.ejs
@@ -44,6 +44,7 @@
         }
       <% } %>
     </style>
+    <%- include('partials/googleanalytics') %>
   </head>
   <body>
     <table style="width: 100%">
