--- a/src/dashboard/views/errors/auth.ejs
+++ b/src/dashboard/views/errors/auth.ejs
@@ -32,6 +32,7 @@
             }
         </style>
         <title>Error</title>
+        <%- include('partials/googleanalytics') %>
     </head>
     <body>
         <h1 class="txt">Failed to log you in!</h1>
