--- a/src/dashboard/views/errors/gotologin.ejs
+++ b/src/dashboard/views/errors/gotologin.ejs
@@ -5,6 +5,7 @@
         <meta property="og:image" content="https://censor.bot/censorbot.png">
         <meta property="og:description" content="Change and customize Censor Bot for your server(s)!">
         <meta name="theme-color" content="#ff3d00">
+        <%- include('partials/googleanalytics') %>
     </head>
     <body>
         <script>
