--- a/src/dashboard/views/errors/notpremium.ejs
+++ b/src/dashboard/views/errors/notpremium.ejs
@@ -32,6 +32,7 @@
             }
         </style>
         <title>Not Premium</title>
+        <%- include('partials/googleanalytics') %>
     </head>
     <body>
         <h1 class="txt">You're not premium!</h1>
