--- a/src/dashboard/views/premium.ejs
+++ b/src/dashboard/views/premium.ejs
@@ -4,6 +4,7 @@
     <head>
         <title>Premium Servers Dashboard</title>
         <link rel="stylesheet" href="<%= base %>/static/css/premium.css">
+        <%- include('partials/googleanalytics') %>
     </head>
     <body style="background-color: #2C2F33">
         <div class="box">
