--- a/src/dashboard/views/update.ejs
+++ b/src/dashboard/views/update.ejs
@@ -35,6 +35,7 @@
         width: 70%;
       }
     </style>
+    <%- include('partials/googleanalytics') %>
   </head>
   <body>
     <div id="main">
