--- a/src/dashboard/views/errors/server.ejs
+++ b/src/dashboard/views/errors/server.ejs
@@ -32,7 +32,7 @@
             }
         </style>
         <title>Error</title>
-        <%- include('partials/googleanalytics') %>
+        <%- include('../partials/googleanalytics') %>
     </head>
     <body>
         <h1 class="txt">You're not where you're supposed to be!</h1>
