--- a/src/lib/dashboard/views/sidebar.ejs
+++ b/src/lib/dashboard/views/sidebar.ejs
@@ -3,7 +3,7 @@
   <div id="snackbar">MESSAGE</div>
   <div class="showSidebar"></div>
   <% if(locals.guild) { %> 
-  <p><%= guild.n %><%- premium ? '<img src="https://censor.bot/premium.png" style="height: 2rem; width: auto">' : '' %></p>
+  <p><%= guild.n %><%- premium ? '<img src="https://censor.bot/premium.png">' : '' %></p>
   <% } else { %>
     <p>Censor Bot</p>
     <% } %>
