--- a/src/lib/dashboard/static/css/base.css
+++ b/src/lib/dashboard/static/css/base.css
@@ -41,7 +41,7 @@ body {
   overflow: hidden;
   display: -ms-grid;
   display: grid;
-      grid-template-areas: "header header" "sidebar main";
+      grid-template-areas: "header header" "sidebar main";
   -ms-grid-rows: 12.5vh auto;
       grid-template-rows: 12.5vh auto;
   -ms-grid-columns: 15vw auto;
@@ -73,6 +73,7 @@ button {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  border-bottom: 1px solid var(--greyple);
 }
 
 #header .showSidebar {
@@ -83,6 +84,12 @@ button {
   text-align: center;
   font-weight: 600;
   font-size: 4rem;
+}
+
+#header img {
+  height: 3rem;
+  width: auto;
+  vertical-align: middle;
 }
 
 #sidebar {
@@ -213,6 +220,7 @@ button {
       grid-template-rows: repeat(3, 1fr);
   grid-gap: 3%;
   overflow-y: auto;
+  margin-bottom: 1rem;
 }
 
 #mainGuildsPage div#guildCard {
@@ -274,11 +282,11 @@ button {
   overflow-y: auto;
 }
 
-#mainGuildPage *[title] {
+#mainGuildPage .left *[title] {
   position: relative;
 }
 
-#mainGuildPage *[title]:hover:before {
+#mainGuildPage .left *[title]:hover:before {
   content: attr(title);
   position: absolute;
   top: -2rem;
@@ -291,8 +299,22 @@ button {
   width: max-content;
 }
 
-#mainGuildPage .switch[title]:hover:before {
-  left: 4rem;
+#mainGuildPage .right *[title] {
+  position: relative;
+}
+
+#mainGuildPage .right *[title]:hover:before {
+  content: attr(title);
+  position: absolute;
+  top: -2rem;
+  right: -4rem;
+  background-color: var(--background-darkest);
+  padding: 3px;
+  border-radius: 8px;
+  font-size: medium;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
 }
 
 #mainGuildPage .hrGrey {
@@ -695,6 +717,11 @@ button {
   background-color: var(--blurple);
 }
 
+main, #mainGuildsPage, #mainGuildPage, #mainInvitePage, #mainPremPage, #mainAdminPage, #mainErrorPage, #mainLoginPage {
+  overflow-x: scroll;
+  height: 100%;
+}
+
 #saveButton {
   position: fixed;
   width: var(--switch-width);
@@ -1033,6 +1060,13 @@ changes .changes button.save {
   color: var(--white);
 }
 
+@media (max-width: 1111px) and (min-width: 755px) {
+  #mainGuildsPage {
+    -ms-grid-columns: 1fr 1fr 1fr 1fr !important;
+        grid-template-columns: 1fr 1fr 1fr 1fr !important;
+  }
+}
+
 @media (max-width: 1111px) {
   main {
     -ms-grid-row: 2;
@@ -1044,16 +1078,20 @@ changes .changes button.save {
   #header p {
     font-size: 2rem;
   }
+  #header img {
+    height: 2rem;
+  }
   #header .showSidebar {
     display: block;
     position: absolute;
     left: 1rem;
+    cursor: pointer;
   }
   #header .showSidebar:before {
     content: '≡';
     font-size: 2rem;
-    -webkit-transition: font-size 1s ease-in-out;
-    transition: font-size 1s ease-in-out;
+    -webkit-transition: font-size 0.5s ease-in-out;
+    transition: font-size 0.5s ease-in-out;
   }
   #header .showSidebar.hide:before {
     font-size: 0;
@@ -1068,8 +1106,8 @@ changes .changes button.save {
     height: calc(100% - 5.5vh);
     width: 50%;
     padding-top: 3rem;
-    -webkit-transition: left 1s ease-in-out;
-    transition: left 1s ease-in-out;
+    -webkit-transition: left 0.5s ease-in-out;
+    transition: left 0.5s ease-in-out;
   }
   #sidebar div > button {
     font-size: 2rem;
@@ -1082,13 +1120,14 @@ changes .changes button.save {
     position: absolute;
     top: 1rem;
     right: 1rem;
+    cursor: pointer;
   }
   #sidebar .close:before {
     content: 'X';
     font-size: 2rem;
   }
   body {
-        grid-template-areas: "header header" "main main";
+        grid-template-areas: "header header" "main main";
     -ms-grid-rows: 5.5vh auto;
         grid-template-rows: 5.5vh auto;
   }
@@ -1131,7 +1170,7 @@ changes .changes button.save {
     width: 100%;
   }
   changes .changes {
-    width: 100%;
+    width: 95%;
     padding: 2%;
   }
 }
