--- a/src/lib/dashboard/static/css/base.css
+++ b/src/lib/dashboard/static/css/base.css
@@ -714,7 +714,7 @@ button {
 }
 
 main, #mainGuildsPage, #mainGuildPage, #mainInvitePage, #mainPremPage, #mainAdminPage, #mainErrorPage, #mainLoginPage {
-  overflow-x: scroll;
+  overflow-y: scroll;
   height: 100%;
 }
 
