--- a/src/lib/dashboard/static/css/base.scss
+++ b/src/lib/dashboard/static/css/base.scss
@@ -521,8 +521,9 @@ button { background-color: map-get($map: $colors, $key: "greyple"); }
 }
 
 main, #mainGuildsPage, #mainGuildPage, #mainInvitePage, #mainPremPage, #mainAdminPage, #mainErrorPage, #mainLoginPage {
-    overflow-y: scroll;
+    overflow-y: auto !important;
     height: 100%;
+    -webkit-overflow-scrolling: touch;
 }
 
 #saveButton {
@@ -763,7 +764,8 @@ changes {
 @media (max-width: 1111px) {
     main {
         grid-area: main;
-        overflow-x: scroll;
+        overflow-y: auto;
+        -webkit-overflow-scrolling: touch;
     }
     #header {
 
