whole body scroll?

--- a/src/lib/dashboard/static/css/base.css
+++ b/src/lib/dashboard/static/css/base.css
@@ -39,7 +39,7 @@ body {
   color: var(--white);
   font-family: 'Noto Sans', sans-serif;
   height: 100vh;
-  overflow: hidden;
+  overflow-y: scroll;
   display: -ms-grid;
   display: grid;
       grid-template-areas: "header header" "sidebar main";
