--- a/src/lib/dashboard/static/css/base.scss
+++ b/src/lib/dashboard/static/css/base.scss
@@ -41,7 +41,6 @@ body {
     color: map-get($map: $colors, $key: "white");
     font-family: 'Noto Sans', sans-serif;
     height: 100vh;
-    overflow-y: scroll;
     display: grid;
     grid-template-areas: "header header"
         "sidebar main";
@@ -49,6 +48,8 @@ body {
     grid-template-columns: 15vw auto;
     position: relative;
 }
+
+
 
 button { background-color: map-get($map: $colors, $key: "greyple"); }
 
@@ -206,8 +207,10 @@ button { background-color: map-get($map: $colors, $key: "greyple"); }
     .left{
     *[title] {
         position: relative;
+        z-index: 998;
     }
     *[title]:hover:before {
+        z-index: 998;
      content: attr(title);
      position: absolute;
     top: -2rem;
@@ -222,13 +225,15 @@ button { background-color: map-get($map: $colors, $key: "greyple"); }
 
 .right {
     *[title] {
+        z-index: 998;
         position: relative;
     }
     *[title]:hover:before {
+        z-index: 998;
      content: attr(title);
      position: absolute;
     top: -2rem;
-    right: -4rem;
+    right: 0rem;
     background-color: map-get($map: $background, $key: 'dark');
     padding: 3px;
     border-radius: 8px;
@@ -522,10 +527,15 @@ button { background-color: map-get($map: $colors, $key: "greyple"); }
 }
 }
 
-main, #mainGuildsPage, #mainGuildPage, #mainInvitePage, #mainPremPage, #mainAdminPage, #mainErrorPage, #mainLoginPage {
-    //overflow-y: auto !important;
-    height: 100%;
-    -webkit-overflow-scrolling: touch;
+@media (min-width: 1111px) {
+    body{
+    overflow-y: hidden;
+    }
+    main, #mainGuildsPage, #mainGuildPage, #mainInvitePage, #mainPremPage, #mainAdminPage, #mainErrorPage, #mainLoginPage {
+        overflow-y: auto !important;
+        height: 100%;
+        -webkit-overflow-scrolling: touch;
+    }
 }
 
 #saveButton {
@@ -693,7 +703,7 @@ input {
 }
 
 changes {
-    position: absolute;
+    position: fixed;
     bottom: 2%;
     width: 85vw;
     @include flex();
@@ -764,12 +774,18 @@ changes {
     }
 }
 @media (max-width: 1111px) {
-    main {
+
+    body {
+        overflow-y: auto !important;
+    }
+    main, #mainGuildsPage, #mainGuildPage, #mainInvitePage, #mainPremPage, #mainAdminPage, #mainErrorPage, #mainLoginPage {
         grid-area: main;
-        //overflow-y: auto;
         -webkit-overflow-scrolling: touch;
     }
     #header {
+        position: fixed;
+        width: 100vw;
+        z-index: 999;
 
         p {
             font-size: 2rem;
@@ -801,10 +817,11 @@ changes {
     #sidebar {
         z-index: 1000;
         display: grid;
-        position: absolute;
-        top: 5.5vh;
+        position: fixed;
+        top: 0;
         left: -50%;
-        height: calc(100% - 5.5vh);
+        height: 100%;
+        max-height: 100%;
         width: 50%;
         padding-top: 3rem;
 
@@ -856,7 +873,6 @@ changes {
     
     #mainGuildPage {
         height: 100%;
-        overflow-x: scroll;
         .selectBox > select{
             width: 100% !important;
         }
