Add invite filter

--- a/src/lib/dashboard/views/guild.ejs
+++ b/src/lib/dashboard/views/guild.ejs
@@ -70,6 +70,8 @@
           <div class="left">
             <h3 title="Whether to use the bot's premade filter that is managed by staff.">Base Filter</h3> <label class="switch"><input type="checkbox" typed='boolean' setting='base'><span
               class="slider round"></span></label>
+            <h3 title="Whether to censor invites.">Censor Invites</h3> <label class="switch"><input type="checkbox" typed='boolean' setting='invites'><span
+              class="slider round"></span></label>
               <hr class="hrGrey"/>
 
               <div class="inputBox" id="Filters" title="Sets what languages the base filter uses"><p>Filters</p> <input placeholder="Add Filters" typed="tagArray" setting="languages"></div>
