Fix favicon not showing

--- a/website/views/header.ejs
+++ b/website/views/header.ejs
@@ -1,4 +1,4 @@
-<link rel="shortcut icon" href="https://censor.bot/censorbot.png" />
+<link rel="shortcut icon" href="https://censor.bot/static/censorbot.png" />
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111382716-4"></script>
 <script>
