Fixes to guild page

--- a/website/views/guild.ejs
+++ b/website/views/guild.ejs
@@ -102,9 +102,9 @@
           <h2>Resend</h2>
           <div><h3 title="Resend someone censored message with the message censored in a spoiler.">Toggle</h3>
             <input type="checkbox" typed='boolean' setting='webhook.enabled'premium></div>
-          <div><h3>Seperate</h3>
+          <div><h3 title="Whether to separate curses and normal words in the resend (BETA/UNSTABLE).">Separate</h3>
             <input type="checkbox" typed='boolean' setting='webhook.separate' premium></div>
-          <div><h3>Seperate Replace</h3> 
+          <div><h3 title="What to replace/cover curses with when Separate is enabled.">Seperate Replace</h3> 
             <select typed="typeNum" setting="webhook.replace" premium>
               <option value="0">Spoilers</option>
               <option value="1">Hashtags</option>
