--- a/website/views/header.ejs
+++ b/website/views/header.ejs
@@ -1,15 +1,12 @@
 <link rel="shortcut icon" href="https://censor.bot/static/censorbot.png" />
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-111382716-4"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-111382716-3"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
-
-  function gtag() {
-    dataLayer.push(arguments);
-  }
+  function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-111382716-4');
+  gtag('config', 'UA-111382716-3');
 </script>
 
 <script src="/static/js/DOM.js"></script>
