--- a/website/views/about.ejs
+++ b/website/views/about.ejs
@@ -30,6 +30,12 @@
         .content {
             text-align: left;
         }
+
+      @media only screen and (max-width: 600px) {
+        body {
+          padding: 0;
+        }
+      }
     </style>
 </head>
 <body>
