--- a/website/views/guild.ejs
+++ b/website/views/guild.ejs
@@ -208,7 +208,7 @@
         document.title = 'Please log in'
         document.getElementById('guildName').innerText = "[Guild Name]"
 
-        _.preset.login('to edit server', not)
+        _.preset.login('edit server settings', not)
 
         not.classList.remove('hidden')
       },
