--- a/website/views/guilds.ejs
+++ b/website/views/guilds.ejs
@@ -42,7 +42,7 @@
             ]
           )))
         },
-        logout: () => _.preset.login('to see your servers'),
+        logout: () => _.preset.login('see your servers'),
         logging: _.preset.loading
       })
     </script>
