--- a/website/views/premium.ejs
+++ b/website/views/premium.ejs
@@ -124,7 +124,7 @@
               logout: () => {
                 servercount.classList.add('hidden')
 
-                _.preset.login('to add/remove premium servers', res)
+                _.preset.login('add/remove premium servers', res)
               },
               logging: () => _.preset.loading(res)
             })
